# first-principles

./: .gitignore  .wrangler.toml  ARCHIVE_NOTES.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  CLOUDFLARE_SUPABASE_ARCHITECTURE.md  CREWAI_INTEGRATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OLD.md  FINAL_ARCHITECTURE.md  FIRST-PRINCIPLES-MVP.md  FIX_JSON_RESPONSE.md  GOOGLE_OAUTH_SETUP.md  LANGUAGE_DETECTION_UPDATE.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  NEXTJS_MIGRATION_GUIDE.md  PAYMENT_QUICKSTART.md  PAYPAL_SETUP.md  PROJECT_IMPLEMENTATION_PLAYBOOK.md  README.md  README_OLD.md  RELEASE_v3.1.0.md  SIMPLIFIED_ARCHITECTURE.md  STRIPE_SETUP.md  SUPABASE_AUTH_CHECKLIST.md  SUPABASE_CUSTOM_DOMAIN.md  SUPABASE_DEPLOYMENT.md  astro.config.mjs  deploy-api.sh  deploy-cloudflare.sh  first-principles.skill  migration-step-2.1-astro-config.md  migration-step-2.2-api-client.md  migration-step-2.3-cloudflare-pages.md  minimal-server.js  package-lock.json  package.json  setup-crewai.sh  sidebar_section.txt  (+10 more)
.astro/: settings.json
.cloudflare/: deploy-config.md  pages.json
archive/: DEPLOYMENT.md  README.md  wrangler.toml
crewai_service/: .env.example  README.md  pyproject.toml
crewai_service/src/first_principles_crew/: bridge.py  crew.py  main.py  models.py
crewai_service/src/first_principles_crew/config/: agents.yaml  tasks.yaml
public/: _redirects  about.html  auth-modal.html  chat.html  history.html  index.html  mindmap.html  pricing.html  robots.txt  sitemap.xml
server/: crewai-bridge.cjs  crewai-runner.py  db.cjs  index.cjs  package.json  (+1 more)
(+58 files in other folders)
